Closed
Bug 781782
Opened 13 years ago
Closed 9 years ago
contentType parameter of Blob slice should be converted to lower case
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox53 | --- | fixed |
People
(Reporter: sawrubh, Assigned: bzbarsky)
References
()
Details
Attachments
(3 files, 3 obsolete files)
|
1.29 KB,
text/html
|
Details | |
|
4.40 KB,
patch
|
bkelly
:
review+
|
Details | Diff | Splinter Review |
|
9.90 KB,
patch
|
Details | Diff | Splinter Review |
All the upper case characters in contentType parameter of slice method on Blob objects should be converted to lower case, according to Section 4.B.b of http://dev.w3.org/2006/webapi/FileAPI/#slide-method-algo .
Expected Result : All upper case characters in contentType parameter should be converted to lower case
Actual Result : Upper case remains unchanged
| Reporter | ||
Updated•13 years ago
|
Updated•13 years ago
|
| Assignee | ||
Comment 1•9 years ago
|
||
Attachment #8813970 -
Flags: review?(amarchesini)
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Updated•9 years ago
|
Attachment #8813970 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Comment 2•9 years ago
|
||
Attachment #8814008 -
Flags: review?(amarchesini)
| Assignee | ||
Updated•9 years ago
|
Attachment #8813970 -
Attachment is obsolete: true
| Assignee | ||
Comment 3•9 years ago
|
||
Andrea, sorry for the extra review; the only difference is more fail annotations removed from web platform tests...
But actually, there are more failures. I guess I get to do more try runs. ;)
| Assignee | ||
Updated•9 years ago
|
Attachment #8814008 -
Flags: review?(amarchesini)
| Assignee | ||
Comment 4•9 years ago
|
||
Ben, could you review the fetch changes please? The service-workers/service-worker/invalid-blobtype.https.html web platform test used to pass because we left the null char in the type, so trying to set the header failed. But with Blob fixed to use an empty type string in this case it started failing (but only in e10s for some reason???), because we were not properly implementing the extract operation from fetch in the Blob case.
I have no idea why that failure was e10s-only and would love to hear if you have some idea why....
Attachment #8814014 -
Flags: review?(bkelly)
| Assignee | ||
Updated•9 years ago
|
Attachment #8814008 -
Attachment is obsolete: true
| Assignee | ||
Comment 5•9 years ago
|
||
Comment on attachment 8814014 [details] [diff] [review]
Lowercase the content type in the Blob and File constructors and Blob.slice
Bah, there are more fetch bits that need adjusting. Let's do this properly....
Attachment #8814014 -
Flags: review?(bkelly)
| Assignee | ||
Comment 6•9 years ago
|
||
Attachment #8814267 -
Flags: review?(bkelly)
| Assignee | ||
Comment 7•9 years ago
|
||
| Assignee | ||
Updated•9 years ago
|
Attachment #8814014 -
Attachment is obsolete: true
Updated•9 years ago
|
Attachment #8814267 -
Flags: review?(bkelly) → review+
Pushed by bzbarsky@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/60d9b4f50544
part 1. Fix fetch code to not set a Content-Type header when it shouldn't. r=bkelly
https://hg.mozilla.org/integration/mozilla-inbound/rev/9acaf2d4db15
part 2. Lowercase the content type in the Blob and File constructors and Blob.slice. r=baku
Comment 9•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/60d9b4f50544
https://hg.mozilla.org/mozilla-central/rev/9acaf2d4db15
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•