Bug 781782 part 1. Fix fetch code to not set a Content-Type header when it shouldn't. r=bkelly